# voice-based-chatbot

./: .gitignore  README.md  pipeline_analysis.py  pyproject.toml  requirements.txt  run.bat  run.nu  run.sh
app/: llm.py  main.py  stt.py  tts.py  utils.py
data/corpus/transcripts/: alpha_phonetic.json  english_phonetic.json  num_phonetic.json  phoneme.json  reference.json
data/prompts/: instruction.md  normalize.md  preserve.md
data/results/: pipeline_results_20260525_122206.json  pipeline_results_20260528_193647.json
gradio_app/: app.py
utils/: audio_remux.py  clean_errors.py
